@@ -25,10 +25,6 @@ Documentation that needs writing:
 
 Available Patches:
 
-    * Ken's "[PATCH] Add '+' and '-' to IndexOptions keywords"
-	Message-ID: <360BEEC2.9A2E31A5@Golux.Com>
-	Status: Ken +1
-
     * Earle Ake: Apache 1.3.1 port to Pyramid DC/OSx
       <199809221847.OAA11700@wpdiss1.wpafb.af.mil>
 
